test/libyul/yulSyntaxTests/function_defined_in_init_nested_3.yul
{
	for {}
		1:bool
		{for {function foo() {}} 1:bool {} {} }
	{}
}
// ----
// SyntaxError 3441: (27-35): Functions cannot be defined inside a for-loop init block.
